# Scrapbook

./: .env.example  LICENSE  README.md  experience_override.json  generate_pdf.py  get_job_listing.py  get_linkedin_profile.py  html_to_pdf_tool.py  list_actions.py  main.py  pyproject.toml  run_real_test.py  run_search_jobs.py  search_jobs.py  test_pdf_toolkits.py
assets/: resume.html
tests/: test_linkedin_tools.py
