[project]
name = "scrapbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "composio>=0.11.1",
    "crewai>=1.6.1",
    "crewai-tools[mcp]>=1.6.1",
    "litellm>=1.81.16",
    "mcp>=1.26.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "composio-core>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "responses>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
